[metadata]
name = mahoney
version = 0.1.0-dev
description = Distributed neuron segmentation
url = https://github.com/dsp-uga/mahoney
maintainer = 'Weiwen Xu, Rajeswari Sivakumar, Chris Barrick'
maintainer_email = 'weiwen.xu@uga.edu, rs12419@uga.edu, cbarrick@uga.edu'
license = MIT
packages = mahoney

[options]
setup_requires = pytest-runner
tests_require = pytest

[aliases]
test = pytest
